--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <div class="row">
-  <h1 *ngIf="project" class="text-center">{{ project.Name }}</h1><button class="btn btn-primary" [routerLink]="['/ticket', projectId]">New ticket</button>
+  <h1 *ngIf="project" class="text-center">{{ project.name }}</h1><button class="btn btn-primary" [routerLink]="['/ticket', projectId]">New ticket</button>
   <div dnd-droppable class="col-md-offset-1 col-md-2 ticket-container text-center" (onDropSuccess)="transferDataSuccess1($event)">
     <h3>Open</h3>
     <div *ngFor="let task of tasks">
-      <div [routerLink]="['/tasks', task.Id]" class="ticket" *ngIf="task.StatusId === 1" dnd-draggable [dragEnabled]="true" [dragData]="task">
-        <div>{{ task.Name }}</div>
-        <div>{{ task.Description }}</div>
-        <div>{{ task.ResponsibleId }}</div>
+      <div [routerLink]="['/tasks', task.id]" class="ticket" *ngIf="task.statusId === 1" dnd-draggable [dragEnabled]="true" [dragData]="task">
+        <div>{{ task.name }}</div>
+        <div>{{ task.description }}</div>
+        <div>{{ task.responsibleId }}</div>
       </div>
     </div>
   </div>
@@ -14,10 +14,10 @@
   <div dnd-droppable class="col-md-2 ticket-container text-center" (onDropSuccess)="transferDataSuccess2($event)">
     <h3>Development</h3>
     <div *ngFor="let task of tasks">
-      <div [routerLink]="['/tasks', task.Id]" class="ticket" *ngIf="task.StatusId === 2" dnd-draggable [dragEnabled]="true" [dragData]="task">
-        <div>{{ task.Name }}</div>
-        <div>{{ task.Description }}</div>
-        <div>{{ task.ResponsibleId }}</div>
+      <div [routerLink]="['/tasks', task.id]" class="ticket" *ngIf="task.statusId === 2" dnd-draggable [dragEnabled]="true" [dragData]="task">
+        <div>{{ task.name }}</div>
+        <div>{{ task.description }}</div>
+        <div>{{ task.responsibleId }}</div>
       </div>
     </div>
   </div>
@@ -25,10 +25,10 @@
   <div dnd-droppable class="col-md-2 ticket-container text-center" (onDropSuccess)="transferDataSuccess3($event)">
     <h3>Ready for QA</h3>
     <div *ngFor="let task of tasks">
-      <div [routerLink]="['/tasks', task.Id]" class="ticket" *ngIf="task.StatusId === 3" dnd-draggable [dragEnabled]="true" [dragData]="task">
-        <div>{{ task.Name }}</div>
-        <div>{{ task.Description }}</div>
-        <div>{{ task.ResponsibleId }}</div>
+      <div [routerLink]="['/tasks', task.id]" class="ticket" *ngIf="task.statusId === 3" dnd-draggable [dragEnabled]="true" [dragData]="task">
+        <div>{{ task.name }}</div>
+        <div>{{ task.description }}</div>
+        <div>{{ task.responsibleId }}</div>
       </div>
     </div>
   </div>
@@ -36,10 +36,10 @@
   <div dnd-droppable class="col-md-2 ticket-container text-center" (onDropSuccess)="transferDataSuccess4($event)">
     <h3>Test</h3>
     <div *ngFor="let task of tasks">
-      <div [routerLink]="['/tasks', task.Id]" class="ticket" *ngIf="task.StatusId === 4" dnd-draggable [dragEnabled]="true" [dragData]="task">
-        <div>{{ task.Name }}</div>
-        <div>{{ task.Description }}</div>
-        <div>{{ task.ResponsibleId }}</div>
+      <div [routerLink]="['/tasks', task.id]" class="ticket" *ngIf="task.statusId === 4" dnd-draggable [dragEnabled]="true" [dragData]="task">
+        <div>{{ task.name }}</div>
+        <div>{{ task.description }}</div>
+        <div>{{ task.responsibleId }}</div>
       </div>
     </div>
   </div>
@@ -47,10 +47,10 @@
   <div dnd-droppable class="col-md-2 ticket-container text-center" (onDropSuccess)="transferDataSuccess5($event)">
     <h3>Closed</h3>
     <div *ngFor="let task of tasks">
-      <div [routerLink]="['/tasks', task.Id]" class="ticket" *ngIf="task.StatusId === 5" dnd-draggable [dragEnabled]="true" [dragData]="task">
-        <div>{{ task.Name }}</div>
-        <div>{{ task.Description }}</div>
-        <div>{{ task.ResponsibleId }}</div>
+      <div [routerLink]="['/tasks', task.id]" class="ticket" *ngIf="task.statusId === 5" dnd-draggable [dragEnabled]="true" [dragData]="task">
+        <div>{{ task.name }}</div>
+        <div>{{ task.description }}</div>
+        <div>{{ task.responsibleId }}</div>
       </div>
     </div>
   </div>
