--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -55,8 +55,8 @@
       class="nav navbar-nav pull-right">
       <li class="nav-item nav-link name">
         <a class="nav-link"
-        [routerLink]="['/users', currentUser.Id]">
-          Hello, {{ currentUser.FullName }}
+        [routerLink]="['/users', currentUser.id]">
+          Hello, {{ currentUser.fullName }}
         </a>
       </li>
 
