--- a/src/app/shared/layout/user-picker/user-picker.component.html
+++ b/src/app/shared/layout/user-picker/user-picker.component.html
@@ -1,3 +1,3 @@
-<select *ngIf="!isSubmitting && users.length" class="user-picker form-control" [(ngModel)]="chosenUser.Id" (ngModelChange)="updateUser($event)">
-  <option *ngFor="let user of users" [ngValue]="user.Id">{{ user.FullName }}</option>
+<select *ngIf="!isSubmitting && users.length" class="user-picker form-control" [(ngModel)]="chosenUser.id" (ngModelChange)="updateUser($event)">
+  <option *ngFor="let user of users" [ngValue]="user.id">{{ user.fullName }}</option>
 </select>
