--- a/src/app/user-page/user-projects/user-tasks/user-tasks.component.html
+++ b/src/app/user-page/user-projects/user-tasks/user-tasks.component.html
@@ -1,4 +1,4 @@
 <div *ngFor="let task of tasks" class="row">
-  <div class="col-md-3 task"><a [routerLink]="['/tasks', task.Id]">{{ task.Name }}</a></div>
-  <span class="col-md-9">{{ task.Description }}</span>
+  <div class="col-md-3 task"><a [routerLink]="['/tasks', task.id]">{{ task.name }}</a></div>
+  <span class="col-md-9">{{ task.description }}</span>
 </div>
