--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-md-offset-1 col-md-10">
     <div class="row">
-      <user-info-component [employeeId]="employeeId"></user-info-component>
-      <user-skills-component [employeeId]="employeeId"></user-skills-component>
+      <app-user-info-component [employeeId]="employeeId"></app-user-info-component>
+      <app-user-skills-component [employeeId]="employeeId"></app-user-skills-component>
     </div>
     <div class="row projects-container">
       <h4>Projects</h4>
-      <user-projects-component [employeeId]="employeeId"></user-projects-component>
+      <app-user-projects-component [employeeId]="employeeId"></app-user-projects-component>
     </div>
   </div>
 </div>
