--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -30,8 +30,8 @@
       </div>
     </div>
   </div>
-  
+
   <div class="col-md-12 container" *ngIf="projects && projects.length">
-    <project-component *ngFor="let project of projects" [emplId]="emplId" [interval]="interval" [project]="project"></project-component>
+    <app-project-component *ngFor="let project of projects" [emplId]="emplId" [interval]="interval" [project]="project"></app-project-component>
   </div>
 </div>
