--- a/src/app/project-page/project-page.component.html
+++ b/src/app/project-page/project-page.component.html
@@ -22,6 +22,6 @@
   </div>
 
   <div class="col-md-offset-2 col-md-8">
-    <team-component [projectId]="projectId"></team-component>
+    <app-team-component [projectId]="projectId"></app-team-component>
   </div>
 </div>
