--- a/src/app/user-page/user-skills/user-skills.component.html
+++ b/src/app/user-page/user-skills/user-skills.component.html
@@ -1,15 +1,15 @@
 <div class="skills-component col-md-4 col-md-offset-1">
   <div class="row">
 
-    <skill-component
+    <app-skill-component
       *ngFor="let skill of skills"
       [skill]="skill"
       [EmployeeId]="employeeId"
       [removeSkill]="deleteSkill.bind(this)"
       [updateSkill]="updateSkill.bind(this)"
-      [isLegal]="isCurrent || isAdmin || isPm"></skill-component>
+      [isLegal]="isCurrent || isAdmin || isPm"></app-skill-component>
 
-      <skill-component
+      <app-skill-component
         *ngIf="addingSkill"
         [skill]="skill"
         [EmployeeId]="employeeId"
@@ -19,11 +19,11 @@
         [isLegal]="isCurrent || isAdmin || isPm"
         [toggleAddingSkill]="toggleAddingSkill.bind(this)"
         [addSkill]="addSkill.bind(this)"
-        [skills]="skills"></skill-component>
+        [skills]="skills"></app-skill-component>
 
         <div class="col-md-offset-4 col-md-2 skill-button">
           <button *ngIf="isCurrent || isAdmin || isPm" class="btn btn-primary" type="button" (click)="toggleAddingSkill()">{{ addingSkill ? 'Cancel' : 'Add Skill'}}</button>
         </div>
-        
+
   </div>
 </div>
